Primer estilo local

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uso de CSS</title>
+</head>
+<body>
+    <h2 style="color: brown;">MÓDULO SALUD</h2>
+    <h1 style="font-family: Arial, Helvetica, sans-serif; color: darkblue; text-align: center;">Módulo de solicitudes</h1>
+    <p style="font-family: 'Courier New', Courier, monospace; color: orange;">En este módulo podrás generar tus solicitudes</p>
+</body>
+</html>
