--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de CSS</title>
+    <style>
+        h1{
+            color: blueviolet;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        p{
+            color: green;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+    </style>
 </head>
 <body>
-    <h2 style="color: brown;">MÓDULO SALUD</h2>
-    <h1 style="font-family: Arial, Helvetica, sans-serif; color: darkblue; text-align: center;">Módulo de solicitudes</h1>
-    <p style="font-family: 'Courier New', Courier, monospace; color: orange;">En este módulo podrás generar tus solicitudes</p>
+    <h2>MÓDULO SALUD</h2>
+    <h1>Módulo de solicitudes</h1>
+    <p>En este módulo podrás generar tus solicitudes</p>
 </body>
 </html>
