--- a/index.html
+++ b/index.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de CSS</title>
-    <style>
-        h1{
-            color: blueviolet;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+    <link rel="stylesheet" href="/styles/style1.css">
 
-        p{
-            color: green;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-    </style>
 </head>
 <body>
     <h2>MÓDULO SALUD</h2>
